# fetch-github-issues

./: README.md  pyproject.toml  test_cli.py
fetch_github_issues/: cli.py
tests/: test_fetch_github_issues.py
